knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_User_Setting__c/pqcrush__WS_User_Setting__c.object-meta.xml
<CustomObject>
    <label>WS User Setting</label>
    <nameField>
        <displayFormat>WSUserSetting-{0000}</displayFormat>
        <label>WS User Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WS User Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>