knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_User_Setting__c/fields/pqcrush__Amount_Type_Filters__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Amount_Type_Filters__c</fullName>
    <label>Amount Type Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>