knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_User_Setting__c/fields/pqcrush__Highlight_Filters__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Highlight_Filters__c</fullName>
    <description>List of highlight id&apos;s used to hide highlights from view</description>
    <label>Highlight Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>