knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_User_Setting__c/fields/pqcrush__Row_Filters__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Row_Filters__c</fullName>
    <label>Row Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>