knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_User_Setting__c/fields/pqcrush__Show_Empty_Columns__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Show_Empty_Columns__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not to show columns that do not have data in any of their cells</description>
    <label>Show columns without data</label>
    <type>Checkbox</type>
</CustomField>