knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_User_Setting__c/fields/pqcrush__Show_Empty_Rows__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Show_Empty_Rows__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not to show rows that do not have any cells with data</description>
    <label>Show rows without data</label>
    <type>Checkbox</type>
</CustomField>