knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_User_Setting__c/fields/pqcrush__Show_Unhighlighted__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Show_Unhighlighted__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Unhighlighted</label>
    <type>Checkbox</type>
</CustomField>