knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_User_Setting__c/fields/pqcrush__User__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WS_User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>