knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_User_Setting__c/fields/pqcrush__White_Space__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__White_Space__c</fullName>
    <label>White Space</label>
    <referenceTo>pqcrush__White_Space__c</referenceTo>
    <relationshipLabel>WS User Settings</relationshipLabel>
    <relationshipName>WS_User_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>