knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_User_Setting__c/fields/pqcrush__Zoom_Index__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Zoom_Index__c</fullName>
    <label>Zoom Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>